# AI-Chess-Model

./: .gitattributes  .gitignore  AI_USE_STATEMENT.md  Dockerfile  README.md  apprunner.yaml  docker-compose.yml  pyproject.toml  requirements-serve.txt
exported_models/gen0007_gen7_peak_decisive_20260211_001017/: export_info.json
exported_models/gen0007_gen7_peak_decisive_20260211_001017/analytics_output/: benchmark_results.json
exported_models/gen0012_gen12_latest_20260211_001035/: export_info.json
exported_models/gen0012_gen12_latest_20260211_001035/analytics_output/: live_games.json  training_history.json
exported_models/gen0020_gen20_v2_fixes_20260212_144707/: export_info.json
exported_models/gen0020_gen20_v2_fixes_20260212_144707/analytics_output/: benchmark_results.json  live_games.json  training_history.json
exported_models/gen0048_v3_pretrained_gen48_20260217_223312/: export_info.json
exported_models/gen0048_v3_pretrained_gen48_20260217_223312/analytics_output/: benchmark_results.json  live_games.json  training_history.json
playground/: index.html
scripts/: analyze.py  benchmark.py  chess_ui.html  export.py  package.py  pretrain.py  serve.py  status.py  train.py  watch.py
src/: export.py
src/analytics/: plots.py
src/api/: engine.py  main.py  schemas.py
src/benchmark/: stockfish_bench.py
src/data/: lichess_dataset.py  openings.py
src/model/: mcts.py  network.py
src/training/: config.py  replay_buffer.py  self_play.py  trainer.py
tests/: test_api.py  test_mcts.py  test_model.py  test_training.py
